# farma-friend

./: README.md  index.html  main.py  pyproject.toml  style.css
datasets/: constants.py  soil.py
ml/: crop_model.pkl  train.py
routers/: crop.py
src/: main.py  models.py
src/routers/: crop.py
src/services/: crop.py
static/: index.html  policies.html  script.js  style.css
